--- a/index.html
+++ b/index.html
@@ -126,3 +126,59 @@
 </body>
 
 </html>
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Produtos - Agronomia e Pecuaria</title>
+
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<header>
+			<div class="caixa">
+				<h1><img src="logo.png"></h1>
+
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contato.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+
+		<main>
+			<ul class="produtos">
+				<li>
+					<h2>Agronomia</h2>
+					<img src="Agronomia.jpg">
+					<p class="produto-descricao">Você irá aprender trablhar com Maquinas Agricula"Trator,Colheitadeira,Pulvurizador,Calcariadeira e recebera um certificado de agronomo.</p>
+					<p class="produto-preco">R$ 250,00</p>
+				</li>
+				<li>
+					<h2>Pecuaria</h2>
+					<img src="">
+					<p class="produto-descricao">Você irá aprender trabalhar com Bovinocultura de Corte,Equinocultura,Nutrição Animal,Administração,Extensão Rural,Criações Alternativas e recebera um certificado de Pecuarista </p>
+					<p class="produto-preco">R$ 250,00</p>
+				</li>
+				<li>
+          
+		<footer>
+			                <h2>Agronomia + Pecuaria</h2>
+					<img src="cabelo+barba.jpg">
+					<p class="produto-descricao">Pacote completo dos cursos de Agronomia e Pecuaria</p>
+					<p class="produto-preco">R$ 455,00</p>
+				</li>
+			</ul>
+		</main>
+
+			<img src="logo-branco.png">
+			<p class="copyright">&copy; Copyright Agronomia e Pecuaria - 2019</p>
+		</footer>
+	</body>
+</html>
+
