--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 <body>
 
 <nav>
-    <a href="#" onclick="changeTab(1)">Introdução à Agronomia</a>
+    <a href="#" onclick="changeTab(1)">Sobre a Agricultura</a>
     <a href="#" onclick="changeTab(2)">Tópicos Específicos em Agronomia</a>
 </nav>
 
 <div id="tab1" class="content">
-    <h1>Introdução à Agronomia</h1>
-    <p>Definição de agronomia, importância, áreas de estudo e perspectivas de carreira.</p>
+    <h1>Sobre a Agricultura</h1>
+    <p>A agricultura desempenha um papel vital na sustentabilidade global, fornecendo alimentos, fibras e biocombustíveis. Com avanços tecnológicos, como a agricultura de precisão e a biotecnologia, os agricultores podem aumentar a produtividade enquanto minimizam o impacto ambiental.No entanto, desafios como as mudanças climáticas e a degradação do solo exigem abordagens inovadoras e sustentáveis para garantir a segurança alimentar e a preservação dos recursos naturais.</p>
 </div>
 
 <div id="tab2" class="content hidden">
