--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
 <div id="tab1" class="content">
     <h1>Sobre a Agricultura</h1>
-    <p>A agricultura desempenha um papel vital na sustentabilidade global, fornecendo alimentos, fibras e biocombustíveis. Com avanços tecnológicos, como a agricultura de precisão e a biotecnologia, os agricultores podem aumentar a produtividade enquanto minimizam o impacto ambiental.No entanto, desafios como as mudanças climáticas e a degradação do solo exigem abordagens inovadoras e sustentáveis para garantir a segurança alimentar e a preservação dos recursos naturais.</p>
+    <p class="escola-texto-um">A agricultura desempenha um papel vital na sustentabilidade global, fornecendo alimentos, fibras e biocombustíveis. Com avanços tecnológicos, como a agricultura de precisão e a biotecnologia, os agricultores podem aumentar a produtividade enquanto minimizam o impacto ambiental. </p>
+    <p class="escola-texto-dois">No entanto, desafios como as mudanças climáticas e a degradação do solo exigem abordagens inovadoras e sustentáveis para garantir a segurança alimentar e a preservação dos recursos naturais.</p>
 </div>
 
 <div id="tab2" class="content hidden">
