--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 </nav>
 
 <div id="tab1" class="content">
-    <h1>Sobre a Agricultura</h1>
-    <p class="escola-texto-um">A agricultura desempenha um papel vital na sustentabilidade global, fornecendo alimentos, fibras e biocombustíveis. Com avanços tecnológicos, como a agricultura de precisão e a biotecnologia, os agricultores podem aumentar a produtividade enquanto minimizam o impacto ambiental. </p>
-    <p class="escola-texto-dois">No entanto, desafios como as mudanças climáticas e a degradação do solo exigem abordagens inovadoras e sustentáveis para garantir a segurança alimentar e a preservação dos recursos naturais.</p>
+    <h2>Introdução</h2>
+            <p>A agronomia é uma área multidisciplinar da ciência agrícola que se concentra no estudo e na prática do cultivo de plantas para produção de alimentos, fibras, medicamentos, biocombustíveis e outros produtos essenciais para a sociedade humana. É uma ciência vital para garantir a segurança alimentar global e promover o desenvolvimento sustentável.</p>
+        </section>
 </div>
 
 <div id="tab2" class="content hidden">
