--- a/index.html
+++ b/index.html
@@ -3,15 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agronomia: Uma Visão Geral</title>
+    <title>Site de Agronomia</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 20px;
+            text-align: center;
+        }
+
+        nav {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 20px;
+        }
+
+        nav ul li a {
+            color: #333;
+            text-decoration: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            background-color: #eee;
+        }
+
+        nav ul li a:hover {
+            background-color: #ddd;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        section {
+            margin-bottom: 30px;
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        p {
+            color: #666;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Agronomia: Uma Visão Geral</h1>
+        <h1>Site de Agronomia</h1>
         <nav>
             <ul>
                 <li><a href="#introducao">Introdução</a></li>
-                <!-- Adicione mais links para outras seções do texto, se desejar -->
+                <li><a href="#definicao">Definição de Agronomia</a></li>
             </ul>
         </nav>
     </header>
@@ -19,15 +74,13 @@
     <main>
         <section id="introducao">
             <h2>Introdução</h2>
-            <p>A agronomia é uma área multidisciplinar da ciência agrícola que se concentra no estudo e na prática do cultivo de plantas para produção de alimentos, fibras, medicamentos, biocombustíveis e outros produtos essenciais para a sociedade humana. É uma ciência vital para garantir a segurança alimentar global e promover o desenvolvimento sustentável.</p>
+            <p>Bem-vindo ao nosso site de agronomia! Aqui você encontrará informações sobre esta fascinante área da ciência agrícola.</p>
         </section>
 
-        <!-- Adicione mais seções conforme necessário -->
-
+        <section id="definicao">
+            <h2>Definição de Agronomia</h2>
+            <p>A agronomia é a ciência que estuda as práticas agrícolas e o manejo dos recursos naturais visando à produção agrícola sustentável. Ela engloba diversas áreas, incluindo ciência do solo, fisiologia vegetal, melhoramento genético, manejo integrado de pragas e doenças, entre outras.</p>
+        </section>
     </main>
-
-    <footer>
-        <p>&copy; 2024 Meu Site de Agronomia. Todos os direitos reservados.</p>
-    </footer>
 </body>
 </html>
